# soutenance

./: .gitignore  Makefile  README.md  dune-project  soutenance.opam
src/: ast.ml  cli.ml  dune  jury.mly  lexer.ml  parser.mly  source_loi.catala_fr  source_loi.ml  soutenance.ml
tests/: denis.md  jury.md  jury.txt
